# AI-CORE

./: .env.example  .env.production.example  .eslintrc.js  .gitignore  .prettierrc  COMPLETE-ALL.bat  COMPLETION-SUMMARY.md  DATABASE-INTEGRATION.md  DEPLOYMENT_PLAN.md  FINAL-COMPLETION-REPORT.md  PENDING-TASKS-EXHAUSTIVE.md  PROJECT-STATUS.md  QUICK-START.md  README.md  demo-server.js  demo-server.ts  docker-compose.yml  git-push.ps1  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
ai-suite/: ESTANDARIZACION-PROCESO-PRODUCCION.md  FASES-DESARROLLO-COMPLETAS-DETALLADAS.md
ait-core-soriano/: .babelrc  .env.example  .env.performance  .env.services.example  .gitignore  .snyk  AGENTES-IA-AVANZADOS.md  AI-PGC-ENGINE-INTEGRACION.md  AI-PGC-ENGINE-INTEGRATION-SUMMARY.md  AIT-COMMS-INTEGRATION-COMPLETE.md  AIT-OS-DOCUMENTATION-INDEX.md  AIT-OS-EXECUTIVE-BRIEF.md  AIT-OS-INTEGRATION-PLAN.md  AIT-OS-QUICK-START.md  AIT_COMMS_README.md  AIT_COMMS_SUMMARY.md  ANALISIS-IMPLEMENTACION-100-COMPLETO.md  ANALISIS-INTEGRACION-AI-SUITE.md  API-GATEWAY-INTEGRATION-SUMMARY.md  ARQUITECTURA-ECOSISTEMA-DEFINITIVA.md  BACKUP-SYSTEM-SUMMARY.md  COMPLETADO-HOY.md  DESCRIPCION_TECNICA_Y_COMERCIAL.md  DOCKER_ARCHITECTURE.md  (+75 more)
ait-core-soriano/engines/ai-core/: pyproject.toml
ait-core-soriano/engines/ai-core/src/: __init__.py
ait-core-soriano/engines/ai-core/src/agents/: __init__.py  analytics_agent.py  assistant_agent.py  base_agent.py  code_agent.py  collab_agent.py  docs_agent.py  mail_agent.py  sheets_agent.py  slides_agent.py
ait-core-soriano/engines/ai-core/src/orchestrator/: __init__.py  fallback_handler.py  model_registry.py  router.py
ait-core-soriano/engines/ai-core/src/rag/: __init__.py  chunker.py  embeddings.py  retriever.py
(+2580 files in other folders)
