[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-suite-core"
version = "1.0.0"
description = "AI-Suite Core: LLM Orchestrator with Multi-Model Support"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AI-Suite Team" }
]
keywords = ["ai", "llm", "orchestrator", "langchain", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.20",
    "litellm>=1.20.0",
    "ollama>=0.1.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "pinecone-client>=3.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "peft>=0.8.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.27.0",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
